squid-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corporate-proxy
  namespace: corporate-proxy
  labels:
    app: corporate-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corporate-proxy
  template:
    metadata:
      labels:
        app: corporate-proxy
    spec:
      containers:
      - name: squid
        image: ubuntu/squid:latest
        ports:
        - containerPort: 3128
          name: proxy
          protocol: TCP
        volumeMounts:
        - name: squid-config
          mountPath: /etc/squid/conf.d/snippet.conf
          subPath: snippet.conf
      volumes:
      - name: squid-config
        configMap:
          name: squid-config

---
apiVersion: v1
kind: Service
metadata:
  name: corporate-proxy
  namespace: corporate-proxy
spec:
  type: ClusterIP
  ports:
  - port: 3128
    targetPort: 3128
    protocol: TCP
    name: proxy
  selector:
    app: corporate-proxy
