agentgateway.yml
# Configure it to use the provided EnterpriseAgentgatewayParameters
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  annotations:
    ambient.istio.io/waypoint-inbound-binding: PROXY/15088
  name: enterprise-agentgateway-waypoint
spec:
  controllerName: solo.io/enterprise-agentgateway
  description: Class for Istio ambient mesh waypoint with agentgateway.
  parametersRef:
    kind: EnterpriseAgentgatewayParameters
    group: enterpriseagentgateway.solo.io
    name: agentgateway
    namespace: agentgateway-system
---
# Create the egress gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: egress-gateway
  namespace: common-infrastructure
spec:
  gatewayClassName: enterprise-agentgateway-waypoint
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
