github-wildcard-se.yml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: github-wildcard
  namespace: common-infrastructure
  labels:
    istio.io/use-waypoint: egress-gateway
spec:
  hosts:
  - "*.github.com"
  location: MESH_EXTERNAL
  resolution: DYNAMIC_DNS
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: TLS
